--- a/Scripts/data_processing.ipynb
+++ b/Scripts/data_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "07fd1e16",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "0d730203",
    "metadata": {},
    "outputs": [
@@ -21,27 +21,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   index               timestamp gender    age  weekly_sport_exercise  \\\n",
-      "0      0 2025-10-09 15:42:53.110   Male  21-23                    0.0   \n",
-      "1      1 2025-10-09 15:52:44.958   Male  18-20                    0.0   \n",
+      "   index               timestamp gender    age weekly_sport_exercise  \\\n",
+      "0      0 2025-10-09 15:42:53.110   Male  21-23                     0   \n",
+      "1      1 2025-10-09 15:52:44.958   Male  18-20                     0   \n",
+      "2      2 2025-10-13 15:51:56.351   Male  21-23                    5+   \n",
+      "3      3 2025-10-13 16:36:27.492   Male  21-23                   2-5   \n",
       "\n",
-      "   weekly_strength_training  current_fitness_level  current_strength_level  \\\n",
-      "0                       0.0                      3                       2   \n",
-      "1                       0.0                      2                       2   \n",
+      "  weekly_strength_training  current_fitness_level  current_strength_level  \\\n",
+      "0                        0                      3                       2   \n",
+      "1                        0                      2                       2   \n",
+      "2                 >2 hours                      5                       5   \n",
+      "3                 >2 hours                      4                       5   \n",
       "\n",
       "   current_tiredness_level  used_cable_machine_before  used_hmd_before  \\\n",
       "0                        4                       True             True   \n",
       "1                        6                      False             True   \n",
+      "2                        4                       True             True   \n",
+      "3                        3                       True             True   \n",
       "\n",
-      "  hmd_motion_sickness_details  \n",
-      "0         No, i am a VR beast  \n",
-      "1                          No  \n"
+      "  hmd_motion_sickness_details        name  \n",
+      "0         No, i am a VR beast     Charles  \n",
+      "1                          No       Eason  \n",
+      "2                          No      Gallon  \n",
+      "3   Basically had no sickness  Joshua Tan  \n"
      ]
     }
    ],
    "source": [
     "\n",
-    "pre_df = pd.read_excel('../Pre User Study.xlsx')\n",
+    "pre_df = pd.read_excel('../RawData/Pre Study/(13-10) Motivations and exercise user study (Responses).xlsx')\n",
     "pre_df.rename(columns={ 'Timestamp':'timestamp', \n",
     "                        'What is your gender?': 'gender', \n",
     "                        'What is your age?': 'age', \n",
@@ -53,7 +61,9 @@
     "                        'Have you used a cable machine before?': 'used_cable_machine_before',\n",
     "                        'Have you used a Head Mounted Display such as the Meta Quest Pro or the Oculus Rift before?': 'used_hmd_before',\n",
     "                        'If you have used a Head Mounted Display before, did you suffer from any form of motion sickness or discomfort? If so, please provide details?': 'hmd_motion_sickness_details',\n",
+    "                        'What is your name?': 'name',\n",
     "                        }, inplace=True)\n",
+    "pre_df.dropna(how='all', axis=1, inplace=True)\n",
     "pre_df['weekly_sport_exercise'] = pre_df['weekly_sport_exercise'].fillna(0)\n",
     "pre_df['weekly_strength_training'] = pre_df['weekly_strength_training'].fillna(0)\n",
     "pre_df['used_cable_machine_before'] = pre_df['used_cable_machine_before'].map({'Yes': True, 'No': False})\n",
@@ -65,23 +75,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "bdddc251",
    "metadata": {},
    "outputs": [],
    "source": [
-    "folders = [\n",
-    "    '../FishingGame/No Music', '../FishingGame/Non Sync', '../FishingGame/Sync'\n",
-    "]\n",
+    "keys = {\n",
+    "    'NM': 'No Music',\n",
+    "    'NC': 'Non Sync',\n",
+    "    'SY': 'Sync'\n",
+    "}\n",
     "\n",
-    "for folder in folders:\n",
-    "    path = os.path.join(folder, 'Post User Study.xlsx')\n",
-    "    post_df = pd.read_excel(path)\n",
+    "POST_STUDY_PATH = '../RawData/Post Study'\n",
+    "files = os.listdir(POST_STUDY_PATH)\n",
+    "files = [f for f in files if not f.startswith('~$') and f.endswith(('.xls', '.xlsx'))]\n",
+    "if len(files) != 3:\n",
+    "    raise ValueError('There should be exactly 3 files in the Post Study folder.')\n",
+    "\n",
+    "for file in files:\n",
+    "    path = os.path.join(POST_STUDY_PATH, file)\n",
+    "    post_df = pd.read_excel(path, skiprows=1)\n",
     "\n",
     "    post_df = post_df.drop(columns=['Start Date', 'End Date', 'Response Type', 'IP Address', 'Progress', 'Duration (in seconds)', 'Finished', \n",
     "                                    'Response ID', 'Recipient Last Name', 'Recipient First Name', 'Recipient Email', 'External Data Reference', \n",
     "                                    'Location Latitude', 'Location Longitude', 'Distribution Channel', 'User Language'])\n",
     "    post_df.rename(columns={ 'Recorded Date':'timestamp', \n",
+    "                            'What is your name?': 'name',\n",
     "                            'Please answer the following likert scale questions - I tried very hard on this activity.': 'tried_hard', \n",
     "                            'Please answer the following likert scale questions - This was an activity that I couldn’t do very well. (R)': 'could_not_do_well',\n",
     "                            'Please answer the following likert scale questions - This experience was fun.': 'experience_fun',\n",
@@ -107,21 +126,42 @@
     "                            'Please answer the following likert scale questions - I didn’t put much energy into this. (R)': 'did_not_put_energy',\n",
     "                            'Please answer the following likert scale questions - This activity did not hold my attention at all. (R)': 'did_not_hold_attention',\n",
     "                            'Please answer the following likert scale questions - After working at this activity for a while, I felt pretty competent.': 'felt_competent',\n",
-    "                            'Please rate your exertion based on your breathing rate or breathlessness.': 'exertion'\n",
+    "                            'Please rate your exertion.': 'exertion'\n",
     "                            }, inplace=True)\n",
+    "\n",
     "    post_df = post_df.fillna(0)\n",
     "    post_df = post_df.reset_index(drop=False)\n",
-    "    save_path = os.path.join(folder.replace('FishingGame', 'ProcessedData'), 'post_df.csv')\n",
+    "    folder = next((value for key, value in keys.items() if key in file), None)\n",
+    "    if folder is None:\n",
+    "        raise ValueError(f'File name {file} does not contain a valid key.')\n",
+    "    save_path = os.path.join(f'../ProcessedData/{folder}/post_df.csv')\n",
     "    post_df.to_csv(save_path, index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e0a698aa",
+   "execution_count": 12,
+   "id": "f7bc99a1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "GAME_LOG_PATH = '../RawData/GameLogs'\n",
+    "files = os.listdir(GAME_LOG_PATH)\n",
+    "\n",
+    "for file in files:\n",
+    "    source_path = os.path.join(GAME_LOG_PATH, file)\n",
+    "    filename_sections = file.split('_')[-2:]\n",
+    "    player_name = filename_sections[0]\n",
+    "    condition = filename_sections[1].replace('.csv', '')\n",
+    "    if condition.startswith(\"S\"):\n",
+    "        dest_path = os.path.join(f'../ProcessedData/Sync/{player_name}.csv')\n",
+    "    elif condition == \"NM\":\n",
+    "        dest_path = os.path.join(f'../ProcessedData/No Music/{player_name}.csv')\n",
+    "    else:\n",
+    "        dest_path = os.path.join(f'../ProcessedData/Non Sync/{player_name}.csv')\n",
+    "    df = pd.read_csv(source_path)\n",
+    "    df.to_csv(dest_path, index=False)\n"
+   ]
   }
  ],
  "metadata": {
