--- a/Scripts/data_processing.ipynb
+++ b/Scripts/data_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "07fd1e16",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "0d730203",
    "metadata": {},
    "outputs": [
@@ -21,35 +21,57 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   index               timestamp gender    age weekly_sport_exercise  \\\n",
-      "0      0 2025-10-09 15:42:53.110   Male  21-23                     0   \n",
-      "1      1 2025-10-09 15:52:44.958   Male  18-20                     0   \n",
-      "2      2 2025-10-13 15:51:56.351   Male  21-23                    5+   \n",
-      "3      3 2025-10-13 16:36:27.492   Male  21-23                   2-5   \n",
+      "   index               timestamp  gender    age weekly_sport_exercise  \\\n",
+      "0      0 2025-10-09 15:42:53.110    Male  21-23                     0   \n",
+      "1      1 2025-10-09 15:52:44.958    Male  18-20                     0   \n",
+      "2      2 2025-10-13 15:51:56.351    Male  21-23                    5+   \n",
+      "3      3 2025-10-13 16:36:27.492    Male  21-23                   2-5   \n",
+      "4      4 2025-10-15 13:19:30.722  Female  18-20                   2-5   \n",
+      "5      5 2025-10-15 14:09:20.496    Male  21-23                   1-2   \n",
+      "6      6 2025-10-15 15:39:29.553    Male  18-20                   0-1   \n",
+      "7      7 2025-10-15 16:18:15.793    Male  21-23                   2-5   \n",
+      "8      8 2025-10-16 14:18:06.713    Male  24-26                    5+   \n",
       "\n",
       "  weekly_strength_training  current_fitness_level  current_strength_level  \\\n",
       "0                        0                      3                       2   \n",
       "1                        0                      2                       2   \n",
       "2                 >2 hours                      5                       5   \n",
       "3                 >2 hours                      4                       5   \n",
+      "4            31-60 minutes                      3                       2   \n",
+      "5                1-2 hours                      3                       5   \n",
+      "6             1-15 minutes                      5                       5   \n",
+      "7                1-2 hours                      4                       4   \n",
+      "8                 >2 hours                      6                       5   \n",
       "\n",
       "   current_tiredness_level  used_cable_machine_before  used_hmd_before  \\\n",
       "0                        4                       True             True   \n",
       "1                        6                      False             True   \n",
       "2                        4                       True             True   \n",
       "3                        3                       True             True   \n",
+      "4                        5                       True            False   \n",
+      "5                        2                       True             True   \n",
+      "6                        6                       True             True   \n",
+      "7                        4                       True             True   \n",
+      "8                        4                       True             True   \n",
       "\n",
-      "  hmd_motion_sickness_details        name  \n",
-      "0         No, i am a VR beast     Charles  \n",
-      "1                          No       Eason  \n",
-      "2                          No      Gallon  \n",
-      "3   Basically had no sickness  Joshua Tan  \n"
+      "             hmd_motion_sickness_details           name  \n",
+      "0                    No, i am a VR beast        Charles  \n",
+      "1                                     No          Eason  \n",
+      "2                                     No         Gallon  \n",
+      "3              Basically had no sickness     Joshua Tan  \n",
+      "4                                    NaN       Ann Lowe  \n",
+      "5  Yes, only when doing moving in game.   Benjamin Qian  \n",
+      "6                                    NaN         John M  \n",
+      "7   Slight motion sickness occasionally.   Stephen Fang  \n",
+      "8                                    NaN      Jacob Sun  \n"
      ]
     }
    ],
    "source": [
     "\n",
-    "pre_df = pd.read_excel('../RawData/Pre Study/(13-10) Motivations and exercise user study (Responses).xlsx')\n",
+    "# Pre-Study Data Processing\n",
+    "\n",
+    "pre_df = pd.read_excel('../RawData/Pre Study/(19-10) Motivations and exercise user study (Responses).xlsx')\n",
     "pre_df.rename(columns={ 'Timestamp':'timestamp', \n",
     "                        'What is your gender?': 'gender', \n",
     "                        'What is your age?': 'age', \n",
@@ -75,11 +97,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "bdddc251",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Post-Study Data Processing\n",
+    "\n",
     "keys = {\n",
     "    'NM': 'No Music',\n",
     "    'NC': 'Non Sync',\n",
@@ -126,7 +150,7 @@
     "                            'Please answer the following likert scale questions - I didn’t put much energy into this. (R)': 'did_not_put_energy',\n",
     "                            'Please answer the following likert scale questions - This activity did not hold my attention at all. (R)': 'did_not_hold_attention',\n",
     "                            'Please answer the following likert scale questions - After working at this activity for a while, I felt pretty competent.': 'felt_competent',\n",
-    "                            'Please rate your exertion.': 'exertion'\n",
+    "                            'Please rate your exertion. - 1': 'exertion'\n",
     "                            }, inplace=True)\n",
     "\n",
     "    post_df = post_df.fillna(0)\n",
@@ -140,11 +164,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "f7bc99a1",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Game Log Data Processing\n",
+    "\n",
     "GAME_LOG_PATH = '../RawData/GameLogs'\n",
     "files = os.listdir(GAME_LOG_PATH)\n",
     "\n",
@@ -153,9 +179,9 @@
     "    filename_sections = file.split('_')[-2:]\n",
     "    player_name = filename_sections[0]\n",
     "    condition = filename_sections[1].replace('.csv', '')\n",
-    "    if condition.startswith(\"S\"):\n",
+    "    if condition.lower().startswith(\"s\"):\n",
     "        dest_path = os.path.join(f'../ProcessedData/Sync/{player_name}.csv')\n",
-    "    elif condition == \"NM\":\n",
+    "    elif condition.lower() == \"nm\":\n",
     "        dest_path = os.path.join(f'../ProcessedData/No Music/{player_name}.csv')\n",
     "    else:\n",
     "        dest_path = os.path.join(f'../ProcessedData/Non Sync/{player_name}.csv')\n",
